--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ur.rtde.client</groupId>
-  <artifactId>python</artifactId>
-  <version>2.7.1</version>
+  <artifactId>rtde</artifactId>
+  <version>2.7.2</version>
   <packaging>pom</packaging>
 
   <properties>
